show list of experiences associated with a given location in details

--- a/Views/Experiences/Create.cshtml
+++ b/Views/Experiences/Create.cshtml
@@ -11,7 +11,7 @@
     @Html.LabelFor(model => model.Entry)
     @Html.EditorFor(model => model.Entry)
 
-    @Html.LabelFor(model => model.Location)
+    @Html.LabelFor(model => model.LocationId)
     @Html.DropDownList("LocationId")
 
     <input type="submit" value="Create" />
