--- a/Views/Locations/Index.cshtml
+++ b/Views/Locations/Index.cshtml
@@ -1,4 +1,8 @@
 ﻿@model IEnumerable<TravelBlog.Models.Location>
+@{
+    ViewData["Title"] = "Location";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
 <h2>Places We've Been</h2>
 
