include identity for future authentication, remove Person class, update models and views accordingly, remove old migrations, show list of experiences and detail views for each experience

--- a/Views/Experiences/Create.cshtml
+++ b/Views/Experiences/Create.cshtml
@@ -1,4 +1,10 @@
-﻿@model TravelBlog.Models.Experience
+﻿
+@{
+    ViewData["Title"] = "Travel Blog";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+@model TravelBlog.Models.Experience
 
 <h2>Add a location</h2>
 <hr />
