--- a/Views/Locations/Create.cshtml
+++ b/Views/Locations/Create.cshtml
@@ -1,4 +1,10 @@
-﻿@model TravelBlog.Models.Location
+﻿
+@{
+    ViewData["Title"] = "Travel Blog";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+@model TravelBlog.Models.Location
 
 <h2>Add a location</h2>
 <hr />
