--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
 
-                <a class="navbar-brand" href="#">Q&amp;A Portal!</a>
+                <a class="navbar-brand" href="#">Travel Blog</a>
             </div>
             <div>
                 <ul class="nav navbar-nav navbar-right">
