--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model string
 @{
     ViewData["Title"] = "Travel Blog";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -15,12 +15,21 @@
                 }
             });
 
-        })
+        });
+        $(".signup-items").submit(function() {
+            $.ajax({
+                type: "POST",
+                url: '@Url.Action("SignedUp")',
+            success: function (result) {
+                $('#signup-display').html(result);
+            }
+        });
 
+        });
     });
 </script>
 <div id="status-message">@ViewBag.message</div>
 <div id="signup">Signup</div>
-<div id="signup-display"></div>
+<div id="signup-display">@Model</div>
 <p>@Html.ActionLink("Experiences", "Index", "Experiences")</p>
 <p>@Html.ActionLink("Sign up for an account", "Signup")</p>
