--- a/Views/Home/SignUpForm.cshtml
+++ b/Views/Home/SignUpForm.cshtml
@@ -3,7 +3,7 @@
 <h3>Create your account</h3>
 <hr />
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Index", "Home", FormMethod.Post, new { @class = "signup-items" }))
 {
     @Html.LabelFor(m => m.UserName)
     @Html.TextBoxFor(m => m.UserName)
@@ -20,4 +20,8 @@
     <input type="submit" value="Sign Up" />
 }
 
-
+<script type="text/javascript">
+    $(document).ready(function(){
+        
+    });
+</script>
